<resources>
    <string name="app_name">semana9Agenda</string>
    <string name="titu">REGISTRO DE CELULARES</string>
    <string name="gama">Agregar Gama de Celular</string>
    <string name="marca">Nombre marca</string>
    <string name="modelo">Modelo Celular</string>
    <string name="precio">Precio Celular</string>
    <string name="ventas">Fecha de venta</string>
    <string name="boton">Guardar Celular</string>
    <string name="boton2">VOLVER AL MENÚ PRINCIPAL</string>

    <string name="titu2">BIENVENIDO/A</string>
    <string name="btn">CATÁLOGO</string>
    <string name="btn2">AGREGAR VENTA</string>
    <string name="btn3">ACERCA DE</string>

    <string name="GA1">GALAXY S22 ULTRA</string>
    <string name="bt1">SIGUIENTE</string>
    <string name="bt2">MENÚ PRINCIPAL</string>

    <string name="GA2">IPHONE 13 PRO MAX</string>
    <string name="bt3">SIGUIENTE</string>
    <string name="bt4">MENÚ PRINCIPAL</string>

    <string name="GA3">HUAWEI P50 PRO</string>
    <string name="bt5">SIGUIENTE</string>
    <string name="bt6">MENÚ PRINCIPAL</string>

    <string name="GM1">XIAOMI NOTE 10 PRO</string>
    <string name="bt7">SIGUIENTE</string>
    <string name="bt8">MENÚ PRINCIPAL</string>

    <string name="GM2">GALAXY A52S</string>
    <string name="bt9">SIGUIENTE</string>
    <string name="bt10">MENÚ PRINCIPAL</string>

    <string name="GM3">MOTOROLA G60</string>
    <string name="bt11">SIGUIENTE</string>
    <string name="bt12">MENÚ PRINCIPAL</string>

    <string name="GB1">MOTOROLA E7 PLUS</string>
    <string name="bt13">SIGUIENTE</string>
    <string name="bt14">MENÚ PRINCIPAL</string>

    <string name="GB2">REALME C21</string>
    <string name="bt15">SIGUIENTE</string>
    <string name="bt16">MENÚ PRINCIPAL</string>

    <string name="GB3">POCO M3 PRO</string>
    <string name="bt17">MENÚ PRINCIPAL</string>

    <string name="con">CONTÁCTANOS</string>
    <string name="bvol">VOLVER AL MENÚ</string>
    <string name="bcontact">CONTÁCTANOS</string>

    <string name="bcompra">ADQUIRIR</string>

    <string name="tv">Seleccione una forma de pago:</string>

    <string name="tv1">Pago seguro por tarjeta de creditoo debito </string>
    <string name="tv2">Titular de tarjeta </string>
    <string name="tv3">Número de trajeta</string>
    <string name="btnP">Pagar y Finalizar </string>
    <string name="tv78">Nombre del producto  </string>


</resources>