<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".Principal">

    <Button
        android:id="@+id/btnAcercaDe"
        android:layout_width="243dp"
        android:layout_height="81dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="230dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/btn3"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAgregarVenta"
        app:layout_constraintVertical_bias="0.165" />

    <TextView
        android:id="@+id/txtTitu"
        android:layout_width="224dp"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="94dp"
        android:background="@color/teal_200"
        android:backgroundTint="@color/teal_200"
        android:gravity="center"
        android:text="@string/titu2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/btnAgregarVenta"
        android:layout_width="243dp"
        android:layout_height="91dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="85dp"
        android:layout_marginTop="218dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/btn2"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCatal"
        app:layout_constraintVertical_bias="0.131" />

    <Button
        android:id="@+id/btnCatal"
        android:layout_width="247dp"
        android:layout_height="76dp"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="81dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/btn"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitu" />

</RelativeLayout>