<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_light"
    tools:context=".Celu6">

    <Button
        android:id="@+id/bt12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="239dp"
        android:layout_height="307dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122"
        app:srcCompat="@drawable/ima6" />

    <TextView
        android:id="@+id/txtGamaMedia3"
        android:layout_width="125dp"
        android:layout_height="36dp"
        android:gravity="center"
        android:text="@string/GM3"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <AutoCompleteTextView
        android:id="@+id/atxt6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pantalla: 6.8&quot;, 1080 x 2460 pixels. Procesador: Snapdragon 732G 2.3GHz. RAM: 4GB/6GB. Almacenamiento: 128GB. Expansión: microSD. Cámara: Triple, 108MP+8MP+2MP. Batería: 6000 mAh. OS: Android 11. Perfil: 9.8 mm. Peso: 225 g."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.609" />
</androidx.constraintlayout.widget.ConstraintLayout>