<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    tools:context=".Celu8">

    <Button
        android:id="@+id/bt16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="269dp"
        android:layout_height="208dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11"
        app:srcCompat="@drawable/ima9" />

    <TextView
        android:id="@+id/txtGamaBaja2"
        android:layout_width="116dp"
        android:layout_height="39dp"
        android:gravity="center"
        android:text="@string/GB2"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <AutoCompleteTextView
        android:id="@+id/atxt8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pantalla: 6.5&quot;, 720 x 1600 pixels. Procesador: Mediatek Helio G35 2.3Ghz. RAM: 3GB/4GB. Almacenamiento: 32GB/64GB. Expansión: microSD. Cámara: Triple, 13MP+2MP+2MP. Batería: 5000 mAh. OS: Android 10. Perfil: 8.9 mm. Peso: 190 g."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605" />
</androidx.constraintlayout.widget.ConstraintLayout>