<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    tools:context=".Celu7">

    <Button
        android:id="@+id/bt14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/bt13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt13"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="275dp"
        android:layout_height="205dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16"
        app:srcCompat="@drawable/ima8" />

    <TextView
        android:id="@+id/txtGamaBaja1"
        android:layout_width="161dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/GB1"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/atxt7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pantalla: 6.5&quot;, 720 x 1600 pixels. Procesador: Snapdragon 460 1.8GHz. RAM: 4GB. Almacenamiento: 64GB. Expansión: microSD. Cámara: Dual, 48MP+2MP. Batería: 5000 mAh. OS: Android 10. Perfil: 9.2 mm. Peso: 200 g."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.536" />
</androidx.constraintlayout.widget.ConstraintLayout>